--- a/deployment/sandbox-v2/roles/helm/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/helm/tasks/main.yml
@@ -14,7 +14,7 @@
 - name: install chart
   block:
   - name: 'Install chart {{install_name}}'
-    command: 'helm --kubeconfig {{kube_config}} install {{install_name}} {{helm_chart}} --wait --timeout 10m0s'
+    command: 'helm --kubeconfig {{kube_config}} install {{install_name}} {{helm_chart}} --f {{helm_values}} --wait --timeout 10m0s'
     when: install_name not in out.stdout.split()
     register: helm_out 
   
