--- a/deployment/sandbox-v2/playbooks/ida.yml
+++ b/deployment/sandbox-v2/playbooks/ida.yml
@@ -1,3 +1,19 @@
+- hosts: mzworker0
+  gather_facts: true
+  roles:
+    - {role: softhsm, hsm_prob: '{{softhsm.ida-auth}}'} 
+
+# Run softhsm
+- hosts: console
+  gather_facts: true
+  vars:   
+    kube_config: '{{mz_kube_config}}' 
+    helm_chart: '{{charts_root}}/softhsm'
+    install_name: softhsm
+    helm_values: 
+  roles:
+    - {role: helm, tags: [softhsm]} 
+
 - hosts: console
   gather_facts: true
   vars:   
