--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
@@ -101,8 +101,10 @@ admin_datasource=ldap_1_DS
 residentservices_datasource=ldap_1_DS
 
 mosip.kernel.registrationclient.app.id=registrationclient
-mosip.kernel.registrationclient.client.id=registration_client_app
-mosip.kernel.registrationclient.secret.key=registration_client_app
+mosip.kernel.registrationclient.client.id=mosip-reg-client
+mosip.kernel.registrationclient.secret.key=abc123
+
+
 
 mosip.kernel.auth.app.id=auth
 mosip.kernel.auth.client.id=mosip-auth-client
