--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -11,6 +11,7 @@ keycloak_mosip_clients:
   - {realm_id: 'preregistration', client_id: 'mosip-prereg-client', secret: 'abc123'} 
   - {realm_id: 'mosip', client_id: 'mosip-regproc-client', secret: 'abc123'} 
   - {realm_id: 'mosip', client_id: 'mosip-ida-client', secret: 'abc123'} 
+  - {realm_id: 'mosip', client_id: 'mosip-reg-client', secret: 'abc123'} 
 
 keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any client)
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
@@ -74,4 +75,9 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'service-account-mosip-auth-client', role_name: 'AUTH'}
   - {realm_id: 'mosip', username: 'service-account-mosip-regproc-client', role_name: 'REGISTRATION_PROCESSOR'}
   - {realm_id: 'mosip', username: 'service-account-mosip-ida-client', role_name: 'ID_AUTHENTICATION'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-reg-client', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-reg-client', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-reg-client', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-reg-client', role_name: 'REGISTRATION_OPERATOR'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-reg-client', role_name: 'REGISTRATION_SUPERVISOR'}
 
