--- a/deployment/sandbox-v2/playbooks/env.yml
+++ b/deployment/sandbox-v2/playbooks/env.yml
@@ -15,7 +15,7 @@
     kube_config: '{{mz_kube_config}}'  # Deploy all these on mz cluster
   roles:
      # Base MOSIP infra
-     - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [ingress-nginx]}
+     - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [ingress]}
      - {role: helm, install_name: 'postgres', helm_chart: '{{charts_root}}/postgres', tags: [postgres]}
      - {role: helm, install_name: 'keycloak', helm_chart: '{{charts_root}}/keycloak', tags: [keycloak]}
      - {role: hdfs, tags: [hdfs]} # 
@@ -23,4 +23,13 @@
      - {role: activemq, tags: [activemq]} # 
      - {role: postgres-init, tags: [postgres-init]} 
      - {role: keycloak-init, tags: [keycloak-init]}  
+
+# Ingress controller on DMZ
+- hosts: console
+  gather_facts: true
+  vars:
+    kube_config: '{{dmz_kube_config}}'  # Deploy all these on mz cluster
+  roles:
+     # Base MOSIP infra
+     - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [dmz-ingress]}
 
