[MOSIP-553] Fixed nginx bugs due to recent changes.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -9,7 +9,7 @@ site:
     get_certificate: true  # get a fresh certificate for the domain using Letsencrypt.
     email: info@mosip.io
     certificate: '/etc/letsencrypt/live/{{sandbox_domain_name}}/fullchain.pem'
-    certificate_key: '/etc/letsencrypt/live/{sandbox_domain_name}}/privkey.pem'
+    certificate_key: '/etc/letsencrypt/live/{{sandbox_domain_name}}/privkey.pem'
   captcha:
     google_recaptcha_site_key: 6LcYufkUAAAAAGLHAJOeS2fuH2edB_yOjmsLVUg-
     google_recaptcha_secret_key: 6LcYufkUAAAAAG6jC1ZodRTp9aieVBj6XKy-n0LA
