--- a/deployment/sandbox-v2/playbooks/nginx.yml
+++ b/deployment/sandbox-v2/playbooks/nginx.yml
@@ -1,11 +1,11 @@
 # Install nginx and letsencrypt
-# ssl.get_certificate defined in group_vars/all.yml
+# site.ssl.get_certificate defined in group_vars/all.yml
 - hosts: nginxserver
   gather_facts: true
   roles:
     - {role: packages/epel, tags: [epel]}
-    - {role: nginx, when: ssl.get_certificate == true, tags: [nginx]} 
-    - {role: letsencrypt, when: ssl.get_certificate == true, tags: [letsencrypt]} 
+    - {role: nginx, when: site.ssl.get_certificate == true, tags: [nginx]} 
+    - {role: letsencrypt, when: site.ssl.get_certificate == true, tags: [letsencrypt]} 
     - {role: nginx, nginx_conf_template: nginx_https_conf.yml.j2}  # Conf file with ssl
   
 
