--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
@@ -1,5 +1,7 @@
 #---------------------------------------Common properties-----------------------
 
+ingress.base.url: http://mzworker0:30080/
+
 #Kernel-idobjectalidator
 # Plug in property source as either 'LOCAL' or 'CONFIG_SERVER' or 'APPLICATION_CONTEXT' through this key
 mosip.kernel.idobjectvalidator.property-source=APPLICATION_CONTEXT
@@ -7,7 +9,7 @@ mosip.kernel.idobjectvalidator.schema-name=mosip-identity-json-schema-qa.json
 mosip.kernel.idobjectvalidator.file-storage-uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
 mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable=NA
 
-mosip.masterdata.base.url = http://kernel-masterdata-service
+mosip.masterdata.base.url = ${ingress.base.url}
 mosip.kernel.idobjectvalidator.masterdata.languages.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/languages
 mosip.kernel.idobjectvalidator.masterdata.gendertypes.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/gendertypes
 mosip.kernel.idobjectvalidator.masterdata.documentcategories.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/documentcategories
@@ -200,7 +202,7 @@ mosip.kernel.uin.length.conjugative-even-digits-limit=3
 
 
 #------------------------Auth-Adapter-----------------------------------------------
-auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
+auth.server.validate.url=${ingress.base.url}/v1/authmanager/authorize/admin/validateToken
 #----------------------- Crypto --------------------------------------------------
 #Crypto asymmetric algorithm name
 mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
@@ -333,7 +335,7 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
 mosip.min-digit-longitude-latitude=4
 mosip.kernel.filtervalue.max_columns=20
 
-auth.server.admin.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
+auth.server.admin.validate.url=${ingress.base.url}/v1/authmanager/authorize/admin/validateToken
 
 #------------------PDF Genration-----------------------------------------
 mosip.kernel.pdf_owner_password=Mosip@dev123
