[MOSIP-750] Multiple instances of softhsm run for IDA.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -84,3 +84,24 @@ softhsm:
     tokens_path: '{{install_root}}/roles/softhsm-prep/files/tokens' 
     node: mzworker0
     local_folder: /mnt/mosip_data/softhsm/ida/
+  idaotp:  
+    label: idaotp
+    conf_file: softhsm2.conf
+    conf_path: '{{install_root}}/roles/softhsm-prep/files/'
+    tokens_path: '{{install_root}}/roles/softhsm-prep/files/tokens' 
+    node: mzworker1
+    local_folder: /mnt/mosip_data/softhsm/idaotp/
+  idakyc:  
+    label: idakyc
+    conf_file: softhsm2.conf
+    conf_path: '{{install_root}}/roles/softhsm-prep/files/'
+    tokens_path: '{{install_root}}/roles/softhsm-prep/files/tokens' 
+    node: mzworker2
+    local_folder: /mnt/mosip_data/softhsm/idakyc/
+  idainternal:  
+    label: idainternal
+    conf_file: softhsm2.conf
+    conf_path: '{{install_root}}/roles/softhsm-prep/files/'
+    tokens_path: '{{install_root}}/roles/softhsm-prep/files/tokens' 
+    node: mzworker2
+    local_folder: /mnt/mosip_data/softhsm/idainternal/
