[MOSIP-552] Version bumped up.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-qa.properties
@@ -49,6 +49,17 @@ registration.processor.LANDING_ZONE = /mnt/regproc/landing
 #Location to store the file which is consumed from the print and postal queue
 registration.processor.PRINT_POSTAL_SERVICE=/home/ftp1/PRINIT_POSTAL_SERVICE
 
+#-----packet-utility----------
+# The known packet sources. Should be set as all fieldCategory present in idschema
+# (NOTE : if fieldCategory is set as pvt then the source should be id)
+registration.processor.sourcepackets=id,evidence,optional
+# The mandatory default source packet.(In default configuration this is thd id packet)
+packet.default.source=id
+# the default schema field cagegory (ex - private)
+schema.default.fieldCategory=pvt
+# The IDSchemaVersion used to create packets in reg-proc
+IDSchema.Version=1.0
+
 #---------registration-processor-camel-bridge------------
 
 #Url to cluster manager to enable this stage for joining the cluster in secure zone
