Errors ignored while reset.

--- a/deployment/sandbox-v2/playbooks/reset-cluster.yml
+++ b/deployment/sandbox-v2/playbooks/reset-cluster.yml
@@ -27,25 +27,31 @@
           file:
             path: /var/lib/cni 
             state: absent
+          ignore_errors: True
 
         - name: Remove various links 
           file:
             path: /var/lib/kubelet/*
             state: absent
+          ignore_errors: True
 
         - name: Remove various links 
           file:
             path: /etc/cni/
             state: absent
+          ignore_errors: True
 
         - name: Remove interfaces
           command: 'ifconfig cni0 down' 
+          ignore_errors: True
 
         - name: Remove interfaces
           command: 'ifconfig flannel.1 down' 
+          ignore_errors: True
 
         - name: Remove interfaces
           command: 'ifconfig docker0 down' 
+          ignore_errors: True
 
         - name: Delete flannel.1 interface
           command: ip link delete flannel.1
