[MOSIP-750] Softhsm instance added for each IDA service.

--- a/deployment/sandbox-v2/helm/charts/ida/templates/auth-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/auth-dep.yaml
@@ -38,6 +38,8 @@ spec:
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
           value: absent
+        - name: PKCS11_PROXY_SOCKET
+          value: {{ .Values.services.auth.hsmUrl }} 
         ports:
         - containerPort: {{ .Values.services.auth.containerPort }}
         readinessProbe:
