--- a/deployment/sandbox-v2/helm/charts/kernel/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.yaml
@@ -66,7 +66,7 @@ services:
     dockerTag: 1.0.9
     containerPort: 8088
     servicePort: 80
-    hsmUrl: tcp://softhsm:80   # Should match with softhsm chart service name and port
+    hsmUrl: tcp://softhsm-keymanager:80   # Should match with softhsm chart service name and port
     ingressPath: /v1/keymanager
     healthUrl: /v1/keymanager/actuator/health
   notifier:
