--- a/deployment/sandbox-v2/playbooks/env.yml
+++ b/deployment/sandbox-v2/playbooks/env.yml
@@ -18,6 +18,7 @@
      - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [ingress]}
      - {role: helm, install_name: 'postgres', helm_chart: '{{charts_root}}/postgres', tags: [postgres]}
      - {role: helm, install_name: 'keycloak', helm_chart: '{{charts_root}}/keycloak', tags: [keycloak]}
+     - {role: helm, install_name: 'hadoop', helm_chart: '{{charts_root}}/hadoop', tags: [hadoop]}
      - {role: hdfs, tags: [hdfs]} # 
      - {role: clamav, tags: [clamav]} # 
      - {role: activemq, tags: [activemq]} # 
