Urls corrected in kernel properties

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-qa.properties
@@ -339,11 +339,13 @@ mosip.keycloak.admin.secret.key=admin
 #---latest changes--#
 master.search.maximum.rows=50
 mosip.level=2
-mosip.kernel.masterdata.audit-url=https://qa.mosip.io/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url= http://kernel-auditmanager-service/v1/auditmanager/audits
+
 mosip.keycloak.max-no-of-users=20000
 
 #---Register device changes--#
-mosip.kernel.sign-url=https://qa.mosip.io/v1/signature/sign
+
+mosip.kernel.sign-url=http://kernel-signature-service/v1/signature/sign
 masterdata.registerdevice.timestamp.validate=+10
 
 mosip.kernel.prereg.realm-id=preregistration
