--- a/deployment/sandbox-v2/playbooks/kernel.yml
+++ b/deployment/sandbox-v2/playbooks/kernel.yml
@@ -1,5 +1,6 @@
 # This play installs all Kernel services using Helm
 
+# Softhsm is needed for Keymanager
 - import_playbook: softhsm.yml 
   vars:
     persistence_node: mzworker0  # Should match group_vars/all.yml
