ingress url corrected

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.yaml
@@ -68,7 +68,7 @@ services:
     ports:
       containerPort: 8082
       servicePort: 80
-    ingressPath: '/registrationprocessor/v1/dmzpacketserver' 
+    ingressPath: /registrationprocessor/v1/dmzpacketserver/ 
     healthUrl: ''
       
 
