--- a/deployment/sandbox-v2/helm/charts/regproc/templates/abishandler-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/abishandler-dep.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.services.abis.serviceName }} 
+  name: {{ .Values.services.abishandler.serviceName }} 
   namespace: {{ .Values.namespace }} 
   labels:
-    app: {{ .Values.services.abis.serviceName }}
+    app: {{ .Values.services.abishandler.serviceName }}
     
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.services.abis.serviceName }} 
+      app: {{ .Values.services.abishandler.serviceName }} 
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
@@ -20,12 +20,12 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.services.abis.serviceName }} 
+        app: {{ .Values.services.abishandler.serviceName }} 
         component: service-hazelcast-server
     spec:
       containers:
-      - name: {{ .Values.services.abis.serviceName }} 
-        image: {{ .Values.services.abis.dockerImage }}:{{ .Values.services.abis.dockerTag }} 
+      - name: {{ .Values.services.abishandler.serviceName }} 
+        image: {{ .Values.services.abishandler.dockerImage }}:{{ .Values.services.abishandler.dockerTag }} 
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
@@ -39,20 +39,20 @@ spec:
           value: absent
         ports:
         - name: eventbus-port
-          containerPort: {{ .Values.services.abis.ports.eventbusPort }}
+          containerPort: {{ .Values.services.abishandler.ports.eventbusPort }}
         - name: hazelcast-port
-          containerPort: {{ .Values.services.abis.ports.hazelcastPort }}
+          containerPort: {{ .Values.services.abishandler.ports.hazelcastPort }}
         - name: verticle-port
-          containerPort: {{ .Values.services.abis.ports.containerPort }}
-#        readinessProbe:
+          containerPort: {{ .Values.services.abishandler.ports.containerPort }}
+#        readinessProbe:  # TODO: Uncomment this or put a actuator health url
 #          httpGet:
-#            path: {{ .Values.services.abis.healthUrl }} 
-#            port: {{ .Values.services.abis.ports.containerPort }} 
+#            path: {{ .Values.services.abishandler.healthUrl }} 
+#            port: {{ .Values.services.abishandler.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
         livenessProbe:
           httpGet:
-            path: {{ .Values.services.abis.healthUrl }} 
-            port: {{ .Values.services.abis.ports.containerPort }} 
+            path: {{ .Values.services.abishandler.healthUrl }} 
+            port: {{ .Values.services.abishandler.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
