--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
@@ -80,7 +80,7 @@ camel.dmz.active.flows.file.names=registration-processor-camel-routes-new-dmz.xm
 #Token generation request id
 token.request.id=io.mosip.registration.processor
 #Token generation app id
-token.request.appid=registrationprocessor
+token.request.appid=regproc
 #Token generation username
 token.request.username=registrationprocessor
 #Token generation password
@@ -139,15 +139,15 @@ CREATEVID=${mosip.base.url}/idrepository/v1/vid
 GETUINBYVID=${mosip.base.url}/idrepository/v1/vid
 
 #BioDedupe Services
-BIODEDUPE=${mosip.base.url}/registrationprocessor/v1/bio-dedupe/biometricfile
+BIODEDUPE=http://regproc-bio-dedupe-service/registrationprocessor/v1/bio-dedupe/biometricfile
 
 #ABIS services
 BIODEDUPEINSERT=${mosip.base.url}/abis/v0.1/registration-processor/abis/insert
 BIODEDUPEPOTENTIAL=${mosip.base.url}/abis/v0.1/registration-processor/abis/identity
 
 #Encrypt Services
-ENCRYPTURL=${mosip.base.url}/v1/cryptomanager/encrypt
-ENCRYPTIONSERVICE=${mosip.base.url}/v1/keymanager/publickey
+ENCRYPTURL=http://kernel-keymanager-service/v1/keymanager/encrypt
+ENCRYPTIONSERVICE=http://kernel-keymanager-service/v1/keymanager/publickey
 PDFSIGN=${mosip.base.url}/v1/keymanager/pdf/sign
 
 #Digital Signature Service
@@ -157,7 +157,7 @@ DIGITALSIGNATURE=${mz.ingress.url}/v1/signature/sign
 mosip.registration.processor.digital.signature.id=io.mosip.registration.processor
 
 #--------Registration Processor Rest Client API's-----------
-DMZCRYPTOMANAGERDECRYPT=${mz.ingress.url}/v1/cryptomanager/decrypt
+DMZCRYPTOMANAGERDECRYPT=${mz.ingress.url}/v1/keymanager/decrypt
 
 #External Service
 EISERVICE=${mosip.base.url}/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
@@ -391,4 +391,4 @@ mosip.registration.processor.sms.id=mosip.sms.send
 mosip.registration.processor.email.id=mosip.email.send
 
 #Kernel Crypto signature
-registration.processor.signature.isEnabled=false
+registration.processor.signature.isEnabled=true
