--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
@@ -312,7 +312,7 @@ mosip.registration.important_guidelines_fra=COUNTRY TO DEFINE THE TEXT OF GUIDEL
 
 #Enable or Disable the MDM service. If set to Y, the MDM services will be invoked for capturing the biometrics.
 #If set N, the MDM services will not be invoked.
-mosip.mdm.enabled=Y
+mosip.mdm.enabled=N
 
 #Validating the User On-Boarding using Bio Service API. If set to Y, the Bio-service API will invoked to validate the user. 
 #If set to N, the Bio-Service API will not be invoked
