--- a/deployment/sandbox-v2/helm/charts/kernel/templates/masterdata-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/masterdata-dep.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: {{ .Values.services.masterdata.serviceName }} 
         image: {{ .Values.services.masterdata.dockerImage }}:{{ .Values.services.masterdata.dockerTag }} 
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
