--- a/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.services.rid.serviceName }} 
+  name: {{ .Values.services.idgen.serviceName }} 
   namespace: {{ .Values.namespace }} 
   labels:
-    app: {{ .Values.services.rid.serviceName }}
+    app: {{ .Values.services.idgen.serviceName }}
     component: {{ .Values.component }} 
     
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.services.rid.serviceName }} 
+      app: {{ .Values.services.idgen.serviceName }} 
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
@@ -21,14 +21,15 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.services.rid.serviceName }} 
+        app: {{ .Values.services.idgen.serviceName }} 
         component: {{ .Values.component }} 
     spec:
       containers:
-      - name: {{ .Values.services.rid.serviceName }} 
-        image: {{ .Values.services.rid.dockerImage }}:{{ .Values.services.rid.dockerTag }} 
+      - name: {{ .Values.services.idgen.serviceName }} 
+        image: {{ .Values.services.idgen.dockerImage }}:{{ .Values.services.idgen.dockerTag }} 
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
+#        # TODO: Correct docker - we have to write variables names explicitly
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
         - name: spring_config_label_env
@@ -40,16 +41,14 @@ spec:
         - name: is_glowroot_env
           value: absent
         ports:
-        - containerPort: {{ .Values.services.rid.containerPort }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.rid.healthUrl }} 
-            port: {{ .Values.services.rid.containerPort }} 
+        - containerPort: {{ .Values.services.idgen.containerPort }}
+        readinessProbe:  #TODO: Since no actuator, we watch tcp port. Is there an actuator?
+          tcpSocket:
+            port: {{ .Values.services.idgen.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
         livenessProbe:
-          httpGet:
-            path: {{ .Values.services.rid.healthUrl }} 
-            port: {{ .Values.services.rid.containerPort }} 
+          tcpSocket:
+            port: {{ .Values.services.idgen.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+          periodSeconds: {{ .Values.probe.period }} 
