--- a/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: {{ .Values.services.prid.serviceName }} 
         image: {{ .Values.services.prid.dockerImage }}:{{ .Values.services.prid.dockerTag }} 
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
 #        # TODO: Correct docker - we have to write variables names explicitly
         - name: active_profile_env
